# variant-test

./: CMakeLists.txt  README.md  VariantTestConfig.cmake.in  kinds.hpp  main.cpp
oo/: factory.hpp
variant/: factory.hpp
